# libblockchain

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
docs/: copilot-usage.md  keyutils-usage.md
examples/: read_key_from_process_keyring.rs
src/: app_key_store.rs  block.rs  blockchain.rs  db_model.rs  hybrid_encryption.rs  lib.rs  traits.rs
tests/: integration_tests.rs  thread_sharing.rs
