[package]
name = "libblockchain"
version = "0.1.0"
edition = "2024"
authors = ["jessethepro"]
license = "MIT"
description = "A generic, lightweight blockchain library with persistent storage, hybrid encryption, and secure key management"
repository = "https://github.com/jessethepro/libblockchain"
keywords = ["blockchain", "cryptography", "storage", "encryption", "sled"]
categories = ["cryptography", "data-structures", "database"]
readme = "README.md"

[dependencies]
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
libcertcrypto = { path = "../libcertcrypto" }
openssl = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
secrecy = "0.10.3"

[dev-dependencies]
tempfile = "3.0"
