[package]
name = "libblockchain"
version = "0.1.0"
edition = "2024"
authors = ["jessethepro"]
license = "MIT"
description = "A generic, lightweight blockchain library with persistent storage, hybrid encryption, and secure key management"
repository = "https://github.com/jessethepro/libblockchain"
keywords = ["blockchain", "cryptography", "storage", "encryption", "rocksdb"]
categories = ["cryptography", "data-structures", "database"]
readme = "README.md"

[dependencies]
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
secrecy = "0.10.3"
rpassword = "7.4.0"
rocksdb = { version = "0.24.0", features = ["mt_static"] }

[dev-dependencies]
tempfile = "3.0"
